--- a/styles.css
+++ b/styles.css
@@ -125,3 +125,82 @@ body {
     height: 12.5rem;
     transition: .5s;
 }
+
+.accordion-content.active.first-accordion{
+    height: 10rem;
+}
+
+/* Responsive */
+@media(max-width: 1200px) {
+    html {
+        font-size: 9.3px;
+    }
+
+    .accordion {
+        width: 60rem;
+    }
+
+    .accordion-content.active {
+        height: 11rem;
+    }
+}
+
+@media(max-width: 992px) {
+    html {
+        font-size: 8.6px;
+    }
+
+    body {
+        height: 135vh;
+        padding: 2rem 0;
+        background-position: right;
+    }
+
+    .accordion {
+        width: 80rem;
+    }
+
+    .accordion-content.active {
+        height: 8rem;
+    }    
+
+    .accordion-content img {
+        width: 8rem;
+        border-radius: .8rem;
+    }
+}
+
+@media(max-width: 768px) {
+    html {
+        font-size: 8px;
+    }
+}
+
+@media(max-width: 576px) {
+    body {
+        height: 118vh;
+        padding: 2rem 0;
+    }
+
+    .accordion {
+        width: 92%;
+    }
+
+    .accordion-content.active {
+        height: 22rem;
+    }
+
+    .accordion-content.active.first-accordion{
+        height: 16rem;
+    }
+
+    .accordion-content {
+        flex-direction: column;
+    }
+
+    .accordion-content img {
+        width: 8rem;
+        border-radius: 50%;
+    }
+}
+
